--- a/src/components/DayItem/style.module.less
+++ b/src/components/DayItem/style.module.less
@@ -23,7 +23,7 @@
         img {
           width: 20px;
           margin-right: 4px;
-          vertical-align: -4px
+          vertical-align: -4px;
         }
       }
     }
