--- a/src/components/PopupCategory/style.module.less
+++ b/src/components/PopupCategory/style.module.less
@@ -38,12 +38,13 @@
       margin: 10px 0;
       font-size: 14px;
     }
-    .expense-wrap, .income-wrap {
+    .expense-wrap,
+    .income-wrap {
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
       p {
-        width: calc(~"(100% - 20px) / 3");
+        width: calc(~'(100% - 20px) / 3');
         text-align: center;
         padding: 12px 0;
         margin-bottom: 10px;
@@ -52,7 +53,7 @@
       }
     }
     .active {
-      background-color: #007fff!important;
+      background-color: #007fff !important;
       color: #fff;
     }
   }
