--- a/src/views/Account/style.module.less
+++ b/src/views/Account/style.module.less
@@ -5,7 +5,7 @@
       .za-cell:after {
         left: unset;
         border-top: unset;
-        border-bottom: 1PX solid #e9e9e9;
+        border-bottom: 1px solid #e9e9e9;
       }
     }
   }
