--- a/src/views/Detail/style.module.less
+++ b/src/views/Detail/style.module.less
@@ -51,7 +51,7 @@
       margin-bottom: 12px;
       span:nth-of-type(1) {
         flex: 3;
-        color: rgba(0,0,0,0.5)
+        color: rgba(0, 0, 0, 0.5);
       }
       span:nth-of-type(2) {
         flex: 9;
@@ -64,11 +64,11 @@
       margin-bottom: 12px;
       span:nth-of-type(1) {
         flex: 3;
-        color: rgba(0,0,0,0.5)
+        color: rgba(0, 0, 0, 0.5);
       }
       span:nth-of-type(2) {
         flex: 9;
-        color: rgba(0,0,0,0.9)
+        color: rgba(0, 0, 0, 0.9);
       }
     }
   }
@@ -86,7 +86,7 @@
       align-items: center;
       justify-content: center;
       height: 100%;
-      flex: 1
+      flex: 1;
     }
     span:nth-of-type(1) {
       color: red;
