--- a/src/views/Home/style.module.less
+++ b/src/views/Home/style.module.less
@@ -46,13 +46,13 @@
         margin-right: 6px;
       }
       .arrow {
-          font-size: 12px;
-          margin-left: 4px;
+        font-size: 12px;
+        margin-left: 4px;
       }
     }
   }
   .content-wrap {
-    height: calc(~"(100% - 50px)");
+    height: calc(~'(100% - 50px)');
     overflow: hidden;
     overflow-y: scroll;
     background-color: #f5f5f5;
@@ -76,7 +76,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1PX solid #e9e9e9; // 大写 PX 不会被转成 rem
+    border: 1px solid #e9e9e9; // 大写 PX 不会被转成 rem
     color: #007fff;
   }
 }
