--- a/src/views/Login/style.module.less
+++ b/src/views/Login/style.module.less
@@ -1,16 +1,22 @@
 .login {
   min-height: 100vh;
-  background-image: linear-gradient(217deg, #6fb9f8, #3daaf85e, #49d3fc1a, #3fd3ff00);
+  background-image: linear-gradient(
+    217deg,
+    #6fb9f8,
+    #3daaf85e,
+    #49d3fc1a,
+    #3fd3ff00
+  );
   .head {
     height: 200px;
-      background: url('@/assets/cryptocurrency.png') no-repeat center;
-      background-size: 120%;
-      border-bottom-left-radius: 12px;
-      border-bottom-right-radius: 12px;
-      img {
-        width: 34px;
-        margin: 15px 0 0 15px;
-      }
+    background: url('@/assets/cryptocurrency.png') no-repeat center;
+    background-size: 120%;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    img {
+      width: 34px;
+      margin: 15px 0 0 15px;
+    }
   }
   .tab {
     color: #597fe7;
@@ -21,14 +27,15 @@
       font-weight: bold;
       &.active {
         font-size: 20px;
-        border-bottom: 2PX solid #597fe7;
+        border-bottom: 2px solid #597fe7;
         padding-bottom: 6px;
       }
     }
   }
   .form {
     padding: 0 6px;
-    :global { // Global scope, CSS Module won't modify it
+    :global {
+      // Global scope, CSS Module won't modify it
       .za-cell {
         background-color: transparent;
         &::after {
