--- a/src/views/Stats/style.module.less
+++ b/src/views/Stats/style.module.less
@@ -13,7 +13,7 @@
       width: 96px;
       padding: 6px;
       background-color: #f5f5f5;
-      color: rgba(0, 0, 0, .9);
+      color: rgba(0, 0, 0, 0.9);
       border-radius: 4px;
       font-size: 14px;
       display: flex;
@@ -21,17 +21,17 @@
       align-items: center;
       margin-bottom: 16px;
       span:nth-of-type(1)::after {
-         content: '';
+        content: '';
         position: absolute;
         top: 9px;
         bottom: 8px;
         right: 28px;
         width: 1px;
-        background-color: rgba(0, 0, 0, .5);
+        background-color: rgba(0, 0, 0, 0.5);
       }
       .date {
         font-size: 16px;
-        color: rgba(0, 0, 0, .5);
+        color: rgba(0, 0, 0, 0.5);
       }
     }
     .title {
@@ -47,7 +47,7 @@
       margin-bottom: 16px;
     }
     .income {
-      color: rgba(0, 0, 0, .5);
+      color: rgba(0, 0, 0, 0.5);
       font-weight: 500;
     }
   }
@@ -62,7 +62,7 @@
       padding: 12px 0;
       .title {
         font-size: 18px;
-        color: rgba(0, 0, 0, .9);
+        color: rgba(0, 0, 0, 0.9);
       }
       .tab {
         span {
@@ -154,7 +154,7 @@
         padding: 12px 0;
         .title {
           font-size: 18px;
-          color: rgba(0, 0, 0, .9);
+          color: rgba(0, 0, 0, 0.9);
         }
         .tab {
           span {
