--- a/src/views/User/style.module.less
+++ b/src/views/User/style.module.less
@@ -4,7 +4,8 @@
   .head {
     height: 160px;
     // background-image: linear-gradient(189deg, #0033d6, #215ae4, #277ff2, #18a4ff);
-    background: url('//s.yezgea02.com/1615971681107/%E4%BD%8D%E5%9B%BE%402x.png') no-repeat;
+    background: url('//s.yezgea02.com/1615971681107/%E4%BD%8D%E5%9B%BE%402x.png')
+      no-repeat;
     background-size: cover;
     display: flex;
     justify-content: space-between;
@@ -36,7 +37,7 @@
     top: 120px;
     left: 50%;
     transform: translateX(-50%);
-    box-shadow: 3px 2px 20px 10px rgba(0, 0, 0, .1);
+    box-shadow: 3px 2px 20px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
   }
